@@ -1,3 +1,7 @@
+2008-01-09 Hans Boehm <Hans.Boehm@hp.com>
+	* src/atomic_ops/sysdeps/standard_ao_double_t.h: Let
+	double_ptr_storage default to long long; define everywhere.
+
 2008-01-08 Hans Boehm <Hans.Boehm@hp.com> (Really mostly Joerg Wagner)
 	* src/atomic_ops/sysdeps/msftc/x86.h: Conditionally add
 	compare_double_and_swap_double.
